force-app/main/default/objects/projectAssigneeCreated2__e/fields/projectAssigneeId__c.field-meta.xml
<CustomField>
    <fullName>projectAssigneeId__c</fullName>
    <label>projectAssigneeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>