force-app/main/default/objects/projectAssigneeCreated2__e/fields/projectAssigneeProjectName__c.field-meta.xml
<CustomField>
    <fullName>projectAssigneeProjectName__c</fullName>
    <label>projectAssigneeProjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>