force-app/main/default/objects/projectAssigneeCreated2__e/fields/projectAssigneeTotalProjectAllocation__c.field-meta.xml
<CustomField>
    <fullName>projectAssigneeTotalProjectAllocation__c</fullName>
    <label>projectAssigneeTotalProjectAllocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>